--- a/html/shop.html
+++ b/html/shop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"> 
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
             <title>
                 document
             </title>
@@ -11,10 +11,10 @@
             <h1>Madhav Creations.. </h1>
             <div class="container">
                 <nav>
-                   <a href="/index.html">HOME</a>   
-                   <a href="/html/catalog.html">CATALOGUE</a> 
-                   <a href="/html/aboutus.html">ABOUT US</a>
-                   <a href="/html/contact.html">CONTACT</a>
+                   <a href="index.html">HOME</a>   
+                   <a href="html/catalog.html">CATALOGUE</a> 
+                   <a href="html/aboutus.html">ABOUT US</a>
+                   <a href="html/contact.html">CONTACT</a>
                
                <input type="text" name="search" placeholder="search for what you are looking for?">
            </nav>         
