--- a/html/catalog.html
+++ b/html/catalog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"> 
-        <link rel="stylesheet" href="/css/catalogue.css">
+        <link rel="stylesheet" href="css/catalogue.css">
             <title>
                 document
             </title>
