--- a/html/shop.html
+++ b/html/shop.html
@@ -22,4 +22,6 @@
             <hr>
             <h2>Select the products you wanna added to the cart.. </h2>
            <h2> <button class="btn">Add To Cart</button></h2>
+    </body>
+</html>
            
