--- a/html/contact.html
+++ b/html/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"> 
-        <link rel="stylesheet" href="css/about.css">
+        <link rel="stylesheet" href="../css/about.css">
             <title>
                 document
             </title>
