--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="html/aboutus.html">ABOUT US</a>
             <a href="html/contact.html">CONTACT</a>
         
-        <input type="text" name="search" placeholder="search for what you are looking for?">
+        <input type="text" name="search" placeholder="Search for what you are looking for?">
     </nav>         
     </div>
              <br>
@@ -122,7 +122,7 @@
     <div class="cont-0">
         <div class="v">
          <p> <h1>  "Yellow!!"Colour Me Yellow!</h1></p>
-          <p><h2>  Dress yourself in shades of this joyous colour teamed with a pair of wedges and jhumkis to add class to your ethnic style.
+          <p><h2>  Dress yourself in shades of this joyous colour teamed with a pair of Wedges and Jhumkis to add class to your Ethnic style.
        </h2></p> </div>
         <div class="van">
         <img src="images/yellow2.jpg"></div>
