--- a/index.html
+++ b/index.html
@@ -296,6 +296,15 @@
            <img src="images/social.jpg"></div>
        </div>
    </p>
+   <p>
+       <div class="social">
+           <div class="soc1">
+               <h2>yup its cool bro-</h2>
+           </div>
+           <div class="soc2">
+           <img src="images/social.jpg"></div>
+       </div>
+   </p>
    <hr>
     <p>
     <div class="cont-14"><p><h1>Online Shopping For Women</h1></p>
